[tool.poetry]
name = "dubins-path"
version = "0.1.0"
description = ""
authors = ["ramjayakumar21 <ramjayakumar21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
